--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "node-geocoder": "^4.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
