--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "mongoose": "^8.0.1",
     "node-geocoder": "^4.2.0",
     "slugify": "^1.6.6"
