--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.7",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
